--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
                 <div class="project-info">
                     <span>Asmal Nurses</span>
                     <div class="project-icons">
-                        <a href="#" > <i class="fa-solid fa-video"></i></a>
-                        <a href="#" ><i class="fa-solid fa-code"></i> </a>
+                        <a href="https://ashmal-care.s3.eu-west-2.amazonaws.com/firstProject/index.html"> <i class="fa-solid fa-video"></i></a>
+                        <a href="https://github.com/AshwaqOsman/firstProject"><i class="fa-solid fa-code"></i> </a>
                     </div>
                 </div>
                 <div>
                     <div class="projet-desc">
-                    <p> Coming soon</p>
+                    <p> HTML and CSS</p>
                        
                     </div>
                 </div>
